--- a/assignment/templates/products.html
+++ b/assignment/templates/products.html
@@ -11,7 +11,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <br>
 <section class="login py-5 border-top-1">
-    <center><a href="/addproduct" class="btn btn-primary">Add Product</a></center><br>
+  
+    <center>
+      <a href="/home" class="btn btn-primary">home</a>
+      <a href="/addproduct" class="btn btn-primary">Add Product</a>
+    </center><br>
     <center><h3>Products Details</h3></center>
   
 {% comment %} <div class="container">
