--- a/assignment/templates/users.html
+++ b/assignment/templates/users.html
@@ -12,7 +12,12 @@
 <br>
 <br>
 <section class="login py-5 border-top-1">
-  <center><a href="/adduser" class="btn btn-primary">Add User</a></center><br>
+  
+
+  <center>
+    <a href="/home" class="btn btn-primary">home</a>
+    <a href="/adduser" class="btn btn-primary">Add User</a>
+  </center><br>
   <center><h3>Users Details</h3></center>
 
 <form action="/users" method="POST">
